upgrade libraries: spark, spark test, cassandra driver, scala